syntax = "proto3";

package admin.api.article;

option go_package = "github.com/ispec-inc/monorepo/go/gen/admin/api/rest/article";

import "admin/view/article.proto";
import "validate/validate.proto";

message GetRequest {}

message GetResponse {
  admin.view.Article article = 1;
}

message ListRequest {}

message ListResponse {
  repeated admin.view.Article articles = 1;
}

message CreateRequest {
  int64 user_id = 1;
  string title = 2;
  string body = 3;
}

message CreateResponse {
  repeated admin.view.Article articles = 1;
}

message UpdateRequest {
  int64 user_id = 1;
  string title = 2;
  string body = 3;
}

message UpdateResponse {
  admin.view.Article article = 1;
}

message DeleteRequest {}

message DeleteResponse {
  repeated admin.view.Article articles = 1;
}
